# human-hivemind

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/src/hivemind/: __init__.py  cli.py  config.py  logging_setup.py  main.py
backend/src/hivemind/api/: ai.py  auth.py  deps.py  domains.py  images.py  schemas.py  subjects.py  write_subjects.py
backend/src/hivemind/db/: __init__.py  models.py  session.py
backend/src/hivemind/models/: __init__.py  ai_representation.py  domain.py  subject.py  user.py  validators.py
backend/src/hivemind/pipeline/: __init__.py  context.py  pipelines.py  runner.py
backend/src/hivemind/pipeline/steps/: __init__.py  audit_log.py  check_authorship.py  load_existing.py  moderate.py  regenerate_ai_representation.py  update_index.py  validate_references.py  validate_schema.py  write_to_storage.py
backend/src/hivemind/services/: __init__.py  content_io.py  db_sync.py  index_sync.py  subject_service.py
backend/src/hivemind/storage/: __init__.py  base.py  factory.py  gcs.py  local.py
backend/tests/: conftest.py  test_content_io.py  test_index_sync.py  test_moderate_stub.py  test_pipeline.py  test_schemas.py  test_storage.py
content/: domains.yaml
content/subjects/deep-neural-networks/: overview.md  subject.yaml
content/subjects/linear-algebra/: overview.md  subject.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: BrainSVG.tsx  CoursePlayer.tsx  DomainCardBrowser.tsx  DomainTree.test.tsx  DomainTree.tsx  LessonEditor.tsx  (+4 more)
(+22 files in other folders)
