[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hivemind"
version = "0.1.0"
description = "Human Hivemind backend"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Human Hivemind" }]
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "PyYAML>=6.0",
    "python-frontmatter>=1.1",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "google-cloud-storage>=2.18",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "typer>=0.12",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
]

[project.scripts]
hivemind = "hivemind.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/hivemind"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "TID",           # tidy imports
    "RUF",
]
ignore = [
    "E501",  # handled by formatter
    "B008",  # function calls in defaults (FastAPI Depends)
    "E741",  # `l` for lesson is consistent and clear in this codebase
]

[tool.ruff.lint.isort]
known-first-party = ["hivemind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
